deployment/rabbitmq/rq-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: rabbitmq-cluster
spec: {}
status: {}
